Add bottom Back To Home Link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="footer">
    <div class="container">
-      <p class="copy">&copy; {{ site.time | date: '%Y' }} | Proudly made using <a href="http://jekyllrb.com">Jekyll</a></p>
+      <p class="copy">&copy; {{ site.time | date: '%Y' }} | Proudly made using <a href="http://jekyllrb.com">Jekyll</a> | <a href="{{ site.home | prepend: site.baseurl }}"> Back To Home </a></p>
 
       <div class="footer-links"> 
          <ul class="noList"> 
@@ -36,4 +36,3 @@
       </div>
    </div>
 </div><!-- end .footer -->
-
